# kff-reference

./: .gitignore  CMakeLists.txt  README.md  kff_io.cpp  kff_io.hpp  kff_io.hpp.in  main.cpp
C++/: CMakeLists.txt  Doxyfile  README.md  kff_io.cpp  kff_io.hpp.in  main.cpp
C++/doc/html/: annotated.html  classKff__file-members.html  classKff__file.html  classSection__GV-members.html  classSection__GV.html  classSection__Minimizer-members.html  classSection__Minimizer.html  classSection__Raw-members.html  classSection__Raw.html  classes.html  files.html  functions.html  functions_func.html  functions_vars.html  graph_legend.html  index.html  kff__io_8cpp.html  kff__io_8cpp__incl.map  kff__io_8cpp__incl.md5  kff__io_8hpp_source.html  md_README.html  menudata.js  pages.html
C++/doc/html/search/: all_0.js  all_1.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  classes_0.js  classes_1.js  files_0.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  pages_0.js  searchdata.js  variables_0.js  variables_1.js  variables_2.js
C++/doc/latex/: annotated.tex  classKff__file.tex  classSection__GV.tex  classSection__Minimizer.tex  classSection__Raw.tex  files.tex  kff__io_8cpp.tex  kff__io_8cpp__incl.md5  md_README.tex  refman.tex
